--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login Page</title>
-</head>
-<body>
-
+<layout:html lang="en"
+             xmlns="http://www.w3.org/1999/xhtml"
+             xmlns:th="http://www.thymeleaf.org"
+             xmlns:layout="http://www.w3.org/1999/xhtml">
+    <head>
+        <title>Blog Home Page</title>
+    </head>
+    <body>
     <h1>Login Page</h1>
-    <br>
+    <br></br>
 
     <label for="username">User name</label>
-    <input type="text" id="username" name="username" placeholder="your username" required="true"/>
+    <input type="text" id="username" name="username" required="true"/>
 
-    <br><br>
+    <br></br>
     <label for="password">Password</label>
-    <input type="password" id="password" name="password" placeholder="your password" required="true"/>
-    <br><br>
+    <input type="password" id="password" name="password" required="true"/>
+    <br></br>
     <button type="submit">Sign in</button>
-</body>
-</html>
+    </body>
+</layout:html>
+
+
+
+
