--- a/src/main/resources/templates/post/posts.html
+++ b/src/main/resources/templates/post/posts.html
@@ -25,7 +25,8 @@
         <p th:text="${#dates.format(post.postDate, 'dd.MM.yyyy HH:mm')}"></p>
         <h1 th:text="${post.heading}"></h1>
             <h2 th:text="${post.description}"></h2>
-        <a href=""></a>
+        <a th:href="|@{/post/cont}|">Read More</a>
+
         <br></br>
 
 
