--- a/src/main/resources/templates/post/postContent.html
+++ b/src/main/resources/templates/post/postContent.html
@@ -7,10 +7,24 @@
         <title>Blog Home Page</title>
     </head>
     <body>
-    Writer page
+    <h2>
+        <a href="posts.html">Back to list of posts</a>
+    </h2>
+    <h1 style="text-align: center">Post detail</h1>
     <br></br>
-    Writer detail
+
+    <h1>Title</h1>
+    <p th:text="${post.heading} ">my text</p>
+
+    <br></br>
+    <h1>Author</h1>
+
+    <p th:text="${post.writer.firstName}"></p>
+    <p th:text="${post.writer.lastName}"></p>
+
+    <h1>Short desciption</h1>
     <p th:text="${post.description}"></p>
+    <p th:text="${post.content}"></p>
 
     </body>
 </layout:html>
