--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -23,26 +23,27 @@
     <table class="tab">
         <thead>
         <tr>
-            <th>First name</th>
-            <th>Last Name</th>
-            <th>email</th>
+            <th>Posted date</th>
+            <th>Title</th>
+            <th>Author</th>
+
+            <th>view post</th>
             <th>Edit</th>
             <th>Delete</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="writer : ${writers}">
-            <td th:text="${writer.firstName}"></td>
-            <td th:text="${writer.lastName}"></td>
-            <td th:text="${writer.email}"></td>
+        <tr th:each="post : ${posts}">
+            <td th:text="${#dates.format(post.postDate, 'dd.MM.yyyy HH:mm')}"></td>
+            <td th:text="${post.heading}"></td>
+            <td th:text="${post.writer.firstName}"></td>
+
+            <td><a href="#" th:href="|@{/post/}${post.id}|">Detail</a></td>
+            <td><a href="#" th:href="|@{/admin/edit}${post.id}|">Edit</a></td>
+            <td><a href="#" th:href="|@{/admin/delete/}${post.id}|">Delete</a></td>
         </tr>
         </tbody>
 
     </table>
     </body>
 </layout:html>
-
-
-
-
-
