--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -16,7 +16,7 @@
             <thead>
             <tr>
                 <th><a th:href="@{/}">Posts</a></th>
-                <th><a th:href="@{/writers}"></a></th>
+                <th><a th:href="@{/writers}">Writers</a></th>
                 <th><a th:href="@{/admin}">manage entries</a></th>
                 <th><a th:href="@{/login}">login</a></th>
                 <th><a th:href="@{/register}"></a></th>
