before new login register design

--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -45,6 +45,8 @@
         </tbody>
     </table>
 
+    <a href="|@{/addPost}|"></a>
+
     <!--<h1><a th:href="|@{/admin/edit/}${post.id}|"></a></h1>-->
 
     </body>
