add post continue

--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -45,7 +45,7 @@
         </tbody>
     </table>
 
-    <a href="|@{/addPost}|"></a>
+    <a th:href="@{/admin/create}">Add post</a>
 
     <!--<h1><a th:href="|@{/admin/edit/}${post.id}|"></a></h1>-->
 
