--- a/src/main/resources/templates/admin/addPost.html
+++ b/src/main/resources/templates/admin/addPost.html
@@ -28,13 +28,13 @@
                 <span th:if="${#fields.hasErrors('description')}" th:errors="*{description}" th:class="help-block">description error</span>
             </div>
         </div>
-        <div th:class="form-group" th:classappend="${#fields.hasErrors('postDate')}? 'has-error'">
-            <label class="col-sm-2 control-label">post date <span class="required">*</span></label>
-            <div class="col-md-10">
-                <input type="datetime" class="form-control" th:field="*{postDate}"/>
-                <span th:if="${#fields.hasErrors('postDate')}" th:errors="*{postDate}" th:class="help-block">Posted date Errors</span>
-            </div>
-        </div>
+        <!--<div th:class="form-group" th:classappend="${#fields.hasErrors('postDate')}? 'has-error'">-->
+            <!--<label class="col-sm-2 control-label">post date <span class="required">*</span></label>-->
+            <!--<div class="col-md-10">-->
+                <!--<input type="datetime" class="form-control" th:field="*{postDate}"/>-->
+                <!--<span th:if="${#fields.hasErrors('postDate')}" th:errors="*{postDate}" th:class="help-block">Posted date Errors</span>-->
+            <!--</div>-->
+        <!--</div>-->
         <!--<div th:class="form-group" th:classappend="${#fields.hasErrors('keywords')}? 'has-error'">-->
             <!--<label class="col-sm-2 control-label">Keywords <span class="required">*</span></label>-->
             <!--<div class="col-md-10">-->
@@ -52,19 +52,26 @@
                 <!--</div>-->
             <!--</div>-->
         <!--</div>-->
-        <!--<div th:class="form-group" th:classappend="${#fields.hasErrors('author')}? 'has-error'">-->
-            <!--<label class="col-sm-2 control-label">Author <span class="required">*</span></label>-->
-            <!--<div class="col-md-10">-->
-                <!--<select class="form-control" th:field="*{author}">-->
-                    <!--<option value="">Select Author</option>-->
-                    <!--<option th:each="author : ${authors}" th:value="${author.id}"-->
-                            <!--th:text="${author.firstName + ' ' + author.lastName}">Authors-->
-                    <!--</option>-->
-                <!--</select>-->
-                <!--<span th:if="${#fields.hasErrors('author')}" th:errors="*{author}"-->
-                      <!--th:class="help-block">Author Errors</span>-->
-            <!--</div>-->
-        <!--</div>-->
+        <div th:class="form-group" th:classappend="${#fields.hasErrors('writer')}? 'has-error'">
+            <label class="col-sm-2 control-label">Writer <span class="required">*</span></label>
+            <div class="col-md-10">
+                <select class="form-control" th:field="*{writer}">
+                    <option value="">Select Writer</option>
+                    <option th:each="writer : ${writers}" th:value="${writer.id}"
+                            th:text="${writer.firstName + ' ' + writer.lastName}">Authors
+                    </option>
+                </select>
+                <span th:if="${#fields.hasErrors('writer')}" th:errors="*{writer}"
+                      th:class="help-block">Writer Errors</span>
+            </div>
+        </div>
+        <div th:class="form-group" th:classappend="${#fields.hasErrors('content')}? 'has-error'">
+            <label class="col-sm-2 control-label">Content <span class="required">*</span></label>
+            <div class="col-md-10">
+                <input type="text" class="form-control" th:field="*{content}"/>
+                <span th:if="${#fields.hasErrors('content')}" th:errors="*{content}" th:class="help-block">content error</span>
+            </div>
+        </div>
         <!--<div class="form-group">-->
             <!--<label class="col-sm-2 control-label">Teaser</label>-->
             <!--<div class="col-md-10">-->
