spring security - login page complete

--- a/src/main/resources/templates/post/postContent.html
+++ b/src/main/resources/templates/post/postContent.html
@@ -24,6 +24,8 @@
 
     <h1>Short desciption</h1>
     <p th:text="${post.description}"></p>
+
+    <h1>Content</h1>
     <p th:text="${post.content}"></p>
     <br></br>
 
