--- a/src/main/resources/templates/login_register/login.html
+++ b/src/main/resources/templates/login_register/login.html
@@ -6,19 +6,39 @@
     <head th:replace="layouts/layout :: head">
         <title>Blog Home Page</title>
     </head>
-    <body>
-    <h1>Login Page</h1>
-    <br></br>
 
-    <label for="username">User name</label>
-    <input type="text" id="username" name="username" required="true"/>
-
-    <br></br>
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password" required="true"/>
-    <br></br>
-    <button type="submit">Sign in</button>
-    </body>
+    <form name="f" th:action="@{/login}" method="post" class="form-signin">
+        <h2 class="form-signin-heading">Please sign in</h2>
+        <div th:if="${param.error}" class="alert alert-danger">
+            Invalid username and password.
+        </div>
+        <div th:if="${param.logout}" class="alert alert-success">
+            You have been logged out.
+        </div>
+        <label for="username" class="sr-only">Username</label>
+        <input type="text" id="username" name="username" class="form-control" placeholder="Username" required="true" />
+        <label for="password" class="sr-only">Password</label>
+        <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="true" />
+        <div class="checkbox">
+            <label>
+                <input id="remember-me" name="remember-me" type="checkbox" /> Remember me
+            </label>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    </form>
+            <!--<body>-->
+            <!--<h1>Login Page</h1>-->
+            <!--<br></br>-->
+        <!---->
+            <!--<label for="username">User name</label>-->
+            <!--<input type="text" id="username" name="username" required="true"/>-->
+        <!---->
+            <!--<br></br>-->
+            <!--<label for="password">Password</label>-->
+            <!--<input type="password" id="password" name="password" required="true"/>-->
+            <!--<br></br>-->
+            <!--<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>-->
+    <!--</body>-->
 </layout:html>
 
 
