Post observer was added

--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -19,7 +19,7 @@
                     <th><a th:href="@{/writers}">Writers</a></th>
                     <th><a th:href="@{/admin}">manage entries</a></th>
                     <th><a th:href="@{/login}">login</a></th>
-                    <th><a th:href="@{/register}"></a></th>
+                    <th><a th:href="@{/register}">register</a></th>
                 </tr>
             </thead>
             <tbody>
