View for Email notification

--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -17,9 +17,9 @@
                 <tr>
                     <th><a th:href="@{/}">Posts</a></th>
                     <th><a th:href="@{/writers}">Writers</a></th>
-                    <th><a th:href="@{/admin}">manage entries</a></th>
+                    <th><a th:href="@{/admin}">Admin Page</a></th>
                     <th><a th:href="@{/login}">login</a></th>
-                    <th><a th:href="@{/register}">register</a></th>
+                    <th><a th:href="@{/observer/register}">register observer</a></th>
                 </tr>
             </thead>
             <tbody>
