--- a/src/main/resources/templates/writer/writerRegistration.html
+++ b/src/main/resources/templates/writer/writerRegistration.html
@@ -84,6 +84,7 @@
         <!--</div>-->
         <button type="submit" class="btn btn-primary pull-right">Submit</button>
 
+    </form>
     </body>
 </layout:html>
 
