--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -12,14 +12,14 @@
     <body>
     <br></br>
     <div th:fragment="head">
-        <table class="header" style="width: 350px">
+        <table class="header" style="width: 550px">
             <thead>
                 <tr>
-                    <th><a th:href="@{/}">Posts</a></th>
-                    <th><a th:href="@{/writers}">Writers</a></th>
-                    <th><a th:href="@{/admin}">Admin Page</a></th>
-                    <th><a th:href="@{/login}">login</a></th>
-                    <th><a th:href="@{/observer/register}">register observer</a></th>
+                    <th><a th:href="@{/}"><p th:text="#{posts}"></p></a></th>
+                    <th><a th:href="@{/writers}"><p th:text="#{writers}"></p></a></th>
+                    <th><a th:href="@{/admin}"><p th:text="#{admin}"></p></a></th>
+                    <th><a th:href="@{/login}"><p th:text="#{login}"></p></a></th>
+                    <th><a th:href="@{/observer/register}"><p th:text="#{sub}"></p></a></th>
                 </tr>
             </thead>
             <tbody>
